tests/paczka2/big_fuzzy/31811359.err
Error in line 8: pau4AfBjJOu S969 72,8
Error in line 6: U8zjQQ S897 36,1
Error in line 11: pau4AfBjJOu A551 67,5
Error in line 18: S567 S897 2,6
Error in line 23: S567 A551 47,5
Error in line 40: U8zjQQ S567 49,68
Error in line 44: 3qG58 A551 152,62
Error in line 34: 3qG58 A551 57,2
Error in line 53: 0h5o0M3x S969 12,57
Error in line 55: 0h5o0M3x S897 55,5
Error in line 60: 3qG58 S897 81,3
Error in line 75: U8zjQQ S897 10,1
Error in line 95: mX5jXACV8 S567 169,5
Error in line 98: 0h5o0M3x A551 15,0
Error in line 101: 3qG58 A551 45,3
Error in line 137: PDWYe S567 49,57
Error in line 129: mX5jXACV8 S897 65,0
Error in line 139: mX5jXACV8 S567 60,1
Error in line 149: pau4AfBjJOu S567 6,S
Error in line 134: PDWYe S567 40,4
Error in line 152: 3qG58 S969 32,6
Error in line 143: mX5jXACV8 S969 97,8
Error in line 155: 3qG58 S897 17,0
Error in line 154: pau4AfBjJOu S567 19,1
Error in line 142: 0h5o0M3x S567 54,2
Error in line 138: S567 S969 57,1
Error in line 170: 3qG58 S969 18,7
Error in line 163: pau4AfBjJOu S897 4,2
Error in line 186: 0h5o0M3x S969 30,5
Error in line 203: S567 S567 27,3
Error in line 217: mX5jXACV8 S567 182,6
Error in line 211: U8zjQQ S969 14,5
Error in line 235: U8zjQQ S567 1,7
